@@ -1,3 +1,7 @@
+2002-07-31  Glynn Foster  <glynn.foster@sun.com>
+
+	* logview.c: s/About.../About. Fixes #89481.
+
 2002-07-26  Deepa Natarajan  <deepa.natarajan@wipro.com>
 
 	* log_repaint.c, logrtns.c, logview.h: When logview first 
